some updates in security

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Agpya Spring</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <H1>this is index.html page</H1>
+<div class="parent">
+    <div class="div1"><h1>Agpya Spring application root page</h1></div>
+</div>
 </body>
 </html>
